Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione tenetur qui alias harum nobis molestiae sequi tempore, porro esse repellendus, laboriosam nisi minima corrupti eos quam non distinctio. Molestias, fugit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quos ex molestiae optio, laboriosam qui officiis dolorum quam magnam. A nulla, repudiandae culpa quasi minus repellendus voluptates quod at neque.</p>
 </body>
 </html>
